js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-else-braceless-empty-str-is-valid-assign-expr.js
if
(
false
)
{
}
else
import
(
'
'
)
;
reportCompare
(
0
0
)
;
