js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
{
import
.
defer
(
)
;
}
